k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-fundamentals
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: kubernetes-fundamentals
  template:
    metadata:
      labels:
        app: kubernetes-fundamentals
        version: v5
    spec:
      containers:
        - name: api
          image: kubernetes-fundamentals:5.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
          startupProbe:
            httpGet:
              path: /health
              port: 5000
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
