k8s/pending-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pending-pod
spec:
  containers:
    - name: app
      image: nginx
      resources:
        requests:
          cpu: "7"
          memory: "1Gi"
