k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubernetes-fundamentals
spec:
  containers:
  - name: api
    image: kubernetes-fundamentals:1.0 
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 5000
