k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-fundamentals
  labels:
    app: kubernetes-fundamentals
spec:
  type: ClusterIP
  selector:
    app: kubernetes-fundamentals
  ports:
    - name: http
      port: 80
      targetPort: 5000
