k8s/allow-only-testclient-np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-test-client
spec:
  podSelector:
    matchLabels:
      app: kubernetes-fundamentals

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              run: test-client
      ports:
        - protocol: TCP
          port: 5000
