k8s/deny-all-request-np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-requests
spec:
  podSelector: 
    matchLabels:
      app: kubernetes-fundamentals
  policyTypes:
  - Ingress
  ingress: []
